--- a/test/fixtures/publicacions.yml
+++ b/test/fixtures/publicacions.yml
@@ -2,12 +2,10 @@
 
 one:
   titulo: MyString
-  contenido: MyString
-  text: MyString
+  contenido: MyText
   blog1: one
 
 two:
   titulo: MyString
-  contenido: MyString
-  text: MyString
+  contenido: MyText
   blog1: two
